--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "webpack": "^1.14.0"
   },
   "scripts": {
-    "dev": "webpack-dev-server --content-base src --inline --hot",
+    "dev": "webpack-dev-server --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
